fixed everything and works how needs to be
