# target/generated-sources/openapi/src/main/java/srl/anagrafica/openapi/api/ProgettoApiDelegate.java
@@ -16,7 +16,7 @@ import java.util.Optional;
  * A delegate to be called by the {@link ProgettoApiController}}.
  * Implement this interface with a {@link org.springframework.stereotype.Service} annotated class.
  */
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-12-22T16:53:51.908316200+01:00[Europe/Paris]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-12-23T18:17:24.714672900+01:00[Europe/Paris]")
 public interface ProgettoApiDelegate {
 
     default Optional<NativeWebRequest> getRequest() {
@@ -47,19 +47,17 @@ public interface ProgettoApiDelegate {
     }
 
     /**
-     * PUT /progetto/associa/{idProgetto}/{idLavoratore} : Modifica un progetto
-     * Modifica un progetto ricevendo un id
+     * POST /progetto/associa/{idProgetto}/{idLavoratore} : Associa il lavoratore con il progetto
+     * Associa un lavoratore al progetto
      *
      * @param idProgetto ID del progetto (required)
      * @param idLavoratore ID del Lavoratore (required)
-     * @param progettoDTO Aggiorna il progetto (required)
-     * @return Modifica riuscita (status code 201)
+     * @return Associazione riuscita (status code 201)
      *         or Progetto not found (status code 401)
      * @see ProgettoApi#associaProgettoLavoratore
      */
     default ResponseEntity<ProgettoDTO> associaProgettoLavoratore(Long idProgetto,
-        Long idLavoratore,
-        ProgettoDTO progettoDTO) {
+        Long idLavoratore) {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
@@ -98,9 +96,9 @@ public interface ProgettoApiDelegate {
     default ResponseEntity<List<ProgettoDTO>> cercaTutti() {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
-                if (mediaType.isCompatibleWith(MediaType.valueOf(""))) {
-                    String exampleString = "";
-                    ApiUtil.setExampleResponse(request, "", exampleString);
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "{ \"dataInizio\" : \"2011-12-03T00:00:00Z\", \"listaLavoratori\" : [ 1, 2, 3 ], \"dataFine\" : \"2011-12-03T00:00:00Z\", \"budget\" : 500.0 }";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
                     break;
                 }
             }
